<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    android:background="@color/gray1"
    tools:context=".Register">
    <LinearLayout
        android:weightSum="5"
        android:layout_marginTop="25dp"

        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="FoodVille"
                android:textSize="50sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                />
        </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_weight="4"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <EditText
                android:paddingLeft="5dp"
                android:drawablePadding="7dp"
                android:background="@drawable/edit_text_round"
                android:inputType="text"
                android:id="@+id/usernameId"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/username_text"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:drawableLeft="@drawable/ic_account_circle_black"


                />
            <EditText
                android:paddingLeft="5dp"
                android:drawablePadding="7dp"
                android:background="@drawable/edit_text_round"
                android:inputType="textEmailAddress"
                android:id="@+id/emailId"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/email_text"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:drawableLeft="@drawable/ic_email_black"


                />
            <EditText
                android:paddingLeft="5dp"
                android:drawablePadding="7dp"
                android:background="@drawable/edit_text_round"
                android:id="@+id/passwordId"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:drawableLeft="@drawable/ic_lock_black"
                android:layout_marginBottom="20dp"

                />
            <EditText
                android:paddingLeft="5dp"
                android:drawablePadding="7dp"
                android:background="@drawable/edit_text_round"
                android:id="@+id/confirmpasswordId"
                android:inputType="textPassword"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/confirm_password_text"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:drawableLeft="@drawable/ic_lock_black"
                android:layout_marginBottom="20dp"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/register_button_text"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/registerButtonId"
                android:background="@drawable/button_round_blue"
                android:textColor="@color/textColor"
                />
        </LinearLayout>

    </LinearLayout>

</ScrollView>