<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/gray1"
    tools:context=".logIn">
    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="30dp"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/logoID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="FoodVille"
                android:textSize="50sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:paddingLeft="5dp"
                android:drawablePadding="7dp"
                android:background="@drawable/edit_text_round"
                android:inputType="text"
                android:id="@+id/usernameId"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/username_text"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:layout_marginBottom="20dp"
                android:drawableLeft="@drawable/ic_account_circle_black"
                />
            <EditText
                android:paddingLeft="5dp"
                android:drawablePadding="7dp"
                android:background="@drawable/edit_text_round"
                android:id="@+id/passwordId"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:hint="@string/password_text"
                android:inputType="textPassword"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:drawableLeft="@drawable/ic_lock_black"
                android:layout_marginBottom="20dp"

                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/logIn_button_text"
                android:textAllCaps="false"
                android:textSize="25sp"
                android:textStyle="bold"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="10dp"
                android:id="@+id/logInButtonId"
                android:background="@drawable/button_round_blue"
                android:textColor="@color/textColor"
                />
            <LinearLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:weightSum="3"
                android:layout_width="wrap_content"
                android:layout_height="50dp">
                <TextView
                    android:gravity="center|right"
                    android:textColor="@android:color/white"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="Don't have an account ?"
                    android:textSize="14sp"
                    android:layout_marginLeft="15dp"
                    />
                <Button
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:id="@+id/registerButtonId"
                    android:textStyle="bold"
                    android:text = "@string/register_button_text"
                    android:textColor="@android:color/white"
                    android:background="@color/gray1"
                    android:textAllCaps="false"
                    android:textSize="15sp"
                    android:gravity="center"
                    />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</ScrollView>